# basestation-cameras

./: CMakeLists.txt  README.md  flake.nix  launch-camera  result
.cursor/rules/: nix.mdc
data/: basestation-cameras.desktop
scripts/: cameracli  cameracli.nix  launch-cameras
src/: IpcServer.cpp  IpcServer.h  MainWindow.cpp  MainWindow.h  RtspStream.cpp  RtspStream.h  VideoFrameWidget.cpp  VideoFrameWidget.h  main.cpp
